# cloudrun-function-terraform

./: .gitignore  README.md
deployment/: cloudbuild.yaml
functions/: main.py  requirements.txt
functions/src/: constants.py
server/: .gitignore  Dockerfile  pyproject.toml
server/app/: gunicorn.conf.py  main.py
terraform/environments/dev/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
terraform/modules/artifact_registry/: main.tf  variables.tf
terraform/modules/cloud_build/: main.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run_function/: main.tf  variables.tf
terraform/modules/vpc_network/: main.tf  variables.tf
