[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.5",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
